--- a/style.css
+++ b/style.css
@@ -8,8 +8,45 @@ html, body{
 height: 100%;
 width: 100%;
 }
-#page{
+#page1{
     width: 100%;
     height: 100vh;
-    background-color: lightblue ;
+    background-color: #EFEAE3 ;
+    position: relative;
+}
+nav{
+    padding: 2vw 2vw;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+   
+}
+#nav-part2{
+    display: flex;
+    align-items: center;
+    gap: 1vw;
+    }
+#nav-part2 h4{
+padding: 10px 20px;
+border: 1px solid rgb(87, 84, 84);
+border-radius: 50px;
+font-weight: 500;
+color: #000000bb;
+font-size: 18px;
+position: relative;
+}
+#nav-part2 h4::after{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    left: 0;
+    bottom: -100%;
+    border-radius: 50%;
+    transition: all ease 0.3s;
+}
+#nav-part2 h4:hover::after{
+    bottom: 0;
 }
